Various style fixes
Fixed operators not fitting in numPad, changed flex values
Fixed opeartions overflowing their container
Removed background color from keyboard

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,10 +3,6 @@
 }
 
 /* Calculator */
-#calculator div {
-    background-color: #daf8f4;
-}
-
 #calculator {
     display: flex;
     flex-direction: column;
@@ -21,6 +17,7 @@
 /* Display */
 #display {
     border: 1.5px solid black;
+    background-color: #dff3e7;
 }
 
 #display > .displayScreen {
@@ -33,32 +30,30 @@
 #keyboard {
     display: flex;
     flex-wrap: wrap;
-    /* padding: 0.1rem; */
-    /* gap: 0.1rem; */
-    /* width: 800px; */
+    gap: 0.3rem;
+    /* row-gap: 0.6rem; */
 }
 
 #keyboard div {
     display: flex;
+    gap: 0.3rem;
 }
 
 
-/* Operation */
+/* Operations */
 #operations {
     flex: 0 0 100%;
 }
 
 #operations > .operation{
-    flex: 1 0 50%;
+    flex: 1 0 0%;
 }
 
 
 /* numPad */
 #numPad {
     flex-wrap: wrap;
-    flex: 0 0 80%;
-    /* padding: 0.1rem;
-    gap: 0.1rem */
+    flex: 0 0 75%;
 }
 
 #numPad > .operand,
@@ -74,10 +69,10 @@
 
 /* Operator */
 #operators {
-    flex-direction: column;
-    flex: 0 1 20%;
+    flex-wrap: wrap;
+    flex: 1 0 0%;
 }
 
 #operators > .operator {
-    /* flex: 0 1 100%; */
+    flex: 0 0 100%;
 }
